test/fail/return_outside_func.zn
# ERRORS: 1
# Test: return outside of function

return 42

func main() {
    0
}
